--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,6 +13,11 @@
         <ul class="taskCategories">
             <%for(task of tasks){%>
                 <li><%= task.taskInput %><%= task.dueDate %><%= task.category%> </li>
+                <a href="http://localhost:5000/tasks/<%=task.id%>">Show task in detail</a>
+                <a href="http://localhost:5000/tasks/<%=task.id%>/edit">Edit task</a>
+                <form action="/tasks/<%= task.id %>?_method=DELETE" method="POST">
+                    <button type="submit">Delete</button>
+                  </form>                  
             <%}%>
         </ul>
     </div>
