--- a/views/show.ejs
+++ b/views/show.ejs
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task i detail</title>
+    <title>Task in detail</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Task</h1>
-    
-
+    <div class="task">
+        <ul class="taskCategories">
+            <%= task.id%>
+                <li><%= task.taskInput %><%= task.dueDate %><%= task.category%> </li>
+        </ul>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
