--- a/views/show.ejs
+++ b/views/show.ejs
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task in detail</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Task in Detail</title>
+    <link rel="stylesheet" href="/css/show.css">
 </head>
 <body>
-    <h1>Task</h1>
     <div class="task">
-        <ul class="taskCategories">
-            <%= task.id%>
-                <li><%= task.taskInput %><%= task.dueDate %><%= task.category%> </li>
-        </ul>
+        <h1>Task Details</h1>
+        <p><strong>Task:</strong> <%= task.taskInput %></p>
+        <p><strong>Due Date:</strong> <%= task.dueDate %></p>
+        <p><strong>Category:</strong> <%= task.category %></p>
+        <a href="/tasks" class="back-btn">Go Back</a>
     </div>
     <script src="app.js"></script>
 </body>
