--- a/public/css/new.css
+++ b/public/css/new.css
@@ -14,7 +14,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh; /* Full height to center the form */
+    height: 100vh; 
 }
 
 /* Form Styling */
