--- a/views/tasks.ejs
+++ b/views/tasks.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To-do List</title>
+    <title>Home - Ta-Da</title>
     <link rel="stylesheet" href="/css/tasks.css">
 </head>
 <body>
